--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -1,7 +1,7 @@
 name: CI Checks
 on:
   push:
-    branches: [ main, test ]
+    branches: [ main, test, modify-workflow ]
   pull_request:
   workflow_dispatch:
 
@@ -17,26 +17,28 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install dependencies
-        run: npm ci
+      # - name: Install dependencies
+      #   run: npm ci
 
-      - name: Generate inputs and outputs
-        run: |
-          npx action-io-generator --outFile='${{ env.GENERATED_FILENAME }}'
+      # - name: Generate inputs and outputs
+      #   run: |
+      #     npx action-io-generator --outFile='${{ env.GENERATED_FILENAME }}'
 
-      - name: Test equivalence
-        run: git --no-pager diff --no-index --exit-code '${{ env.COMMITTED_FILENAME }}' '${{ env.GENERATED_FILENAME }}'
+      # - name: Test equivalence
+      #   run: git --no-pager diff --no-index --exit-code '${{ env.COMMITTED_FILENAME }}' '${{ env.GENERATED_FILENAME }}'
 
-      - name: Print contents
-        if: ${{ failure() }}
-        run: |
-          echo "----- Contents of ${{ env.GENERATED_FILENAME }} -----"
-          cat '${{ env.GENERATED_FILENAME }}'
-          echo "----- End Contents ----"
+      # - name: Print contents
+      #   if: ${{ failure() }}
+      #   run: |
+      #     echo "----- Contents of ${{ env.GENERATED_FILENAME }} -----"
+      #     cat '${{ env.GENERATED_FILENAME }}'
+      #     echo "----- End Contents ----"
 
-          echo "---- Contents of ${{ env.COMMITTED_FILENAME }} -----"
-          cat '${{ env.COMMITTED_FILENAME }}'
-          echo "---- End Contents -----"
+      #     echo "---- Contents of ${{ env.COMMITTED_FILENAME }} -----"
+      #     cat '${{ env.COMMITTED_FILENAME }}'
+      #     echo "---- End Contents -----"
+      - name: Run Input output checker
+        uses: divyansh42/io-checker@main
 
   check-dist:
     name: Check Distribution
