--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "js-yaml": "^3.14.0"
   },
   "devDependencies": {
+    "@redhat-actions/action-io-generator": "^1.2.0",
     "@types/js-yaml": "^3.12.5",
     "@types/node": "12",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "@vercel/ncc": "^0.24.1",
-    "action-io-generator": "https://github.com/tetchel/action-io-generator/releases/download/v0.2.0/action-io-generator-v0.2.0.tar.gz",
     "eslint": "^7.15.0",
     "typescript": "^4.0.5"
   }
