--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -29,17 +29,17 @@ jobs:
         run: |
           oc api-resources
 
-      - name: Log out
-        # We fake the post state by setting this flag
-        # before executing the action. This should trigger logout
-        env:
-          STATE_isPost: 1
-        uses: ./
+      # - name: Log out
+      #   # We fake the post state by setting this flag
+      #   # before executing the action. This should trigger logout
+      #   env:
+      #     STATE_isPost: 1
+      #   uses: ./
 
-      - name: Test logout
-        run: |
-          set -a
-          oc api-resources || EXIT_CODE=$?
-          if [[ ${EXIT_CODE} -eq 0 ]]; then 
-            exit 1; 
-          fi
+      # - name: Test logout
+      #   run: |
+      #     set -a
+      #     oc api-resources || EXIT_CODE=$?
+      #     if [[ ${EXIT_CODE} -eq 0 ]]; then
+      #       exit 1;
+      #     fi
