--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -22,7 +22,8 @@ jobs:
           openshift_token: ${{ secrets.OPENSHIFT_TOKEN }}
           # openshift_username: ${{ env.TEST_USER }}
           # openshift_password: ${{ secrets.OPENSHIFT_PASSWORD }}
-          certificate_authority_data: ${{ secrets.CA_DATA }}
+          # certificate_authority_data: ${{ secrets.CA_DATA }}
+          insecure_skip_tls_verify: true
           namespace: ${{ secrets.OPENSHIFT_NAMESPACE }}
 
       - name: Test
